@@ -1,5 +1,6 @@
 2022-10-21  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/devices/grolj4/lj4.cpp (usage):
 	* src/preproc/pic/main.cpp (usage): Update usage message.
 	Present different modes of operation on separate output lines.
 	Sort options in English lexicographic order.
